更新 supervisord.conf

--- a/.docker/supervisor/supervisord.conf
+++ b/.docker/supervisor/supervisord.conf
@@ -1,5 +1,5 @@
 [supervisord]
-nodaemon=true
+nodaemon=false
 user=root
 logfile=/dev/stdout
 logfile_maxbytes=0
@@ -8,7 +8,7 @@ loglevel=info
 
 [program:octane]
 process_name=%(program_name)s_%(process_num)02d
-command=php /www/artisan octane:start --host=0.0.0.0 --port=7001
+command=php /www/artisan octane:start --host=0.0.0.0 --port=80
 autostart=%(ENV_ENABLE_WEB)s
 autorestart=true
 user=www
@@ -23,22 +23,6 @@ stopasgroup=true
 killasgroup=true
 priority=100
 
-[program:horizon]
-process_name=%(program_name)s_%(process_num)02d
-command=php /www/artisan horizon
-autostart=%(ENV_ENABLE_HORIZON)s
-autorestart=true
-user=www
-redirect_stderr=true
-stdout_logfile=/dev/stdout
-stdout_logfile_maxbytes=0
-stdout_logfile_backups=0
-numprocs=1
-stopwaitsecs=3
-stopsignal=SIGINT
-stopasgroup=true
-killasgroup=true
-priority=200
 
 [program:redis]
 process_name=%(program_name)s_%(process_num)02d
@@ -48,7 +32,7 @@ command=redis-server --dir /data
     --save 300 10 
     --save 60 10000 
     --unixsocket /data/redis.sock 
-    --unixsocketperm 777
+    --unixsocketperm 777 --port 0
 autostart=%(ENV_ENABLE_REDIS)s
 autorestart=true
 user=redis
