--- a/.docker/supervisor/supervisord.conf
+++ b/.docker/supervisor/supervisord.conf
@@ -26,13 +26,7 @@ priority=100
 
 [program:redis]
 process_name=%(program_name)s_%(process_num)02d
-command=redis-server --dir /data 
-    --dbfilename dump.rdb 
-    --save 900 1 
-    --save 300 10 
-    --save 60 10000 
-    --unixsocket /data/redis.sock 
-    --unixsocketperm 777 --port 0
+command=redis-server --unixsocket /data/redis.sock --unixsocketperm 777 --port 0
 autostart=%(ENV_ENABLE_REDIS)s
 autorestart=true
 user=redis
