--- a/.docker/supervisor/supervisord.conf
+++ b/.docker/supervisor/supervisord.conf
@@ -9,7 +9,7 @@ loglevel=info
 [program:octane]
 process_name=%(program_name)s_%(process_num)02d
 command=php /www/artisan octane:start --host=0.0.0.0 --port=80
-autostart=%(ENV_ENABLE_WEB)s
+autostart=s
 autorestart=true
 user=www
 redirect_stderr=true
@@ -27,7 +27,7 @@ priority=100
 [program:redis]
 process_name=%(program_name)s_%(process_num)02d
 command=redis-server --unixsocket /data/redis.sock --unixsocketperm 777 --port 0
-autostart=%(ENV_ENABLE_REDIS)s
+autostart=true
 autorestart=true
 user=redis
 redirect_stderr=true
