--- a/.docker/supervisor/supervisord.conf
+++ b/.docker/supervisor/supervisord.conf
@@ -9,7 +9,7 @@ loglevel=info
 [program:octane]
 process_name=%(program_name)s_%(process_num)02d
 command=php /www/artisan octane:start --host=0.0.0.0 --port=80
-autostart=s
+autostart=true
 autorestart=true
 user=www
 redirect_stderr=true
