--- a/.docker/supervisor/supervisord.conf
+++ b/.docker/supervisor/supervisord.conf
@@ -27,8 +27,8 @@ priority=100
 [program:redis]
 process_name=%(program_name)s_%(process_num)02d
 command=redis-server --unixsocket /data/redis.sock --unixsocketperm 777 --port 0
-autostart=true
-autorestart=true
+autostart=false
+autorestart=false
 user=redis
 redirect_stderr=true
 stdout_logfile=/dev/stdout
