--- a/.docker/supervisor/supervisord.conf
+++ b/.docker/supervisor/supervisord.conf
@@ -25,7 +25,7 @@ priority=100
 
 [program:redis]
 process_name=%(program_name)s_%(process_num)02d
-command=redis-server --unixsocket /data/redis.sock --unixsocketperm 777 --port 0
+command=redis-server --dir /data --dbfilename dump.rdb --save 900 1 --save 300 10 --save 60 10000 --unixsocket /data/redis.sock --unixsocketperm 777 --port 0
 autostart=true
 autorestart=true
 user=redis
